# ceasoning

./: .gitignore  CMakeLists.txt  Config.cmake.in  Doxyfile  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  config.h.in  configure  configure.ac  libtool  test-driver
doc-html/: annotated.html  baseresources_8h.html  baseresources_8h__dep__incl.map  baseresources_8h_source.html  basestores_8h.html  compositestores_8h__dep__incl.md5  compositestores_8h__incl.map  compositestores_8h_source.html  dir_000002_000001.html  dir_53ca2cb6bd7da516bb406a0946f59453.html  dir_d4118b8b1aebc91b3478ca01c62ed377.html  dir_fa3b942b33b04fef8622e6ed9abffc5c.html  dir_fa3b942b33b04fef8622e6ed9abffc5c_dep.map  dir_fa3b942b33b04fef8622e6ed9abffc5c_dep.md5  fileresource_8h__dep__incl.map  fileresource_8h__dep__incl.md5  fileresource_8h__incl.map  fileresource_8h__incl.md5  files.html  globals_type.html  structcsalt__heap__coll__graph.map  structcsalt__heap__coll__graph.md5  structcsalt__resource__file__coll__graph.md5  structcsalt__resource__interface.html  structcsalt__resource__interface__coll__graph.map  structcsalt__resource__interface__coll__graph.md5  structcsalt__store__fallback.html  structcsalt__store__fallback__coll__graph.map  structcsalt__store__list.html  structresource__heap__data.html  structresource__heap__data__coll__graph.md5  structsplit__data.html  structsplit__data__coll__graph.map  structtransfer__data__coll__graph.map  util_8h__dep__incl.map  util_8h_source.html
doc-html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  classes_0.js  classes_1.js  classes_3.js  functions_0.js  pages_0.js  typedefs_0.js  variables_0.js
docs/: annotated.html  array_8h.html  array_8h__dep__incl.dot  array_8h__incl.dot  array_8h_source.html  baseresources_8h.html  baseresources_8h__dep__incl.map  baseresources_8h__dep__incl.md5  baseresources_8h__incl.dot  baseresources_8h__incl.map  baseresources_8h__incl.md5  baseresources_8h_source.html  basestores_8h.html  basestores_8h__dep__incl.dot  basestores_8h__dep__incl.map  basestores_8h__dep__incl.md5  basestores_8h__incl.dot  basestores_8h__incl.map  basestores_8h__incl.md5  basestores_8h_source.html  bytewise_copy_8c-example.html  classes.html  client_8h.html  client_8h__dep__incl.dot  client_8h__incl.dot  client_8h_source.html  compositeresources_8h.html  compositeresources_8h__dep__incl.map  compositeresources_8h__dep__incl.md5  compositeresources_8h__incl.dot  compositeresources_8h__incl.map  compositeresources_8h__incl.md5  compositeresources_8h_source.html  compositestores_8h.html  compositestores_8h__dep__incl.dot  compositestores_8h__dep__incl.map  compositestores_8h__dep__incl.md5  compositestores_8h__incl.dot  compositestores_8h__incl.map  compositestores_8h__incl.md5  (+439 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  functions_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  related_0.js  (+10 more)
pages/: CMakeLists.txt  bytewise_copy.c  mainpage.md
src/: CMakeLists.txt  Makefile.am  Makefile.in  csaltresources.c  csaltresources.h  csaltstores.c  log_message.c  saltresources.c  saltresources.h  util.c
src/csalt/: baseresources.h  basestores.h  compositeresources.h  compositestores.h  decoratorresources.h  decoratorstores.h  fileresource.h  keystores.h  log_message.h  networkresources.h  resources.h  stores.h  util.h
src/csalt/impl/: list_impl.h
src/csalt/resource/: base.h  fallback.h  file.h  first.h  format.h  heap.h  lazy.h  logger.h  mutex.h  network.h  pair.h
src/csalt/resource/network/: client.h
src/csalt/resources/: base.h  file.h  first.h  format.h  heap.h  pair.h
src/csalt/store/: array.h  base.h  decorator.h  fallback.h  logger.h  memory.h  mutex.h  noop.h  pair.h  rwlock.h
src/csalt/stores/: base.h  decorator.h  fallback.h  logger.h  memory.h  mutex.h  noop.h  pair.h  rwlock.h
src/keystores/: keystores.c
src/resource/: base.c  compositeresources.c  decorators.c  fallback.c  file.c  first.c  format.c  heap.c  lazy.c  logger.c  mutex.c  network.c  pair.c
src/resource/network/: client.c
src/resources/: Makefile.am  Makefile.in  compositeresources.c  decorators.c  file.c  first.c  format.c  heap.c  network.c  pair.c  resources.c
src/store/: array.c  base.c  decorator.c  fallback.c  logger.c  memory.c  mutex.c  noop.c  pair.c  rwlock.c
src/stores/: Makefile.am  Makefile.in  array.c  base.c  compositestores.c  decorator.c  decorators.c  fallback.c  logger.c  memory.c  mutex.c  noop.c  pair.c  rwlock.c  stores.c
tests/: .csalt_store_transfer.c.swp  .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  atconfig  csalt_decorator_mutex.c  csalt_file_resource.c  csalt_log_message.c  csalt_memory_resource.c  csalt_resource_decorator_lazy.c  csalt_resource_decorator_logger.c  csalt_resource_fallback.c  csalt_resource_file.c  csalt_resource_first.c  csalt_resource_format.c  csalt_resource_heap.c  csalt_resource_lazy.c  csalt_resource_list.c  csalt_resource_logger.c  csalt_resource_mutex.c  csalt_resource_network.c  csalt_resource_network_client.c  csalt_resource_network_udp.c  csalt_resource_network_udp_bound.c  csalt_resource_network_udp_connected.c  csalt_resource_network_udp_stateless.c  csalt_resource_pair.c  csalt_resource_use.c  csalt_resource_vector.c  csalt_resources_use.c  csalt_store_array.c  csalt_store_decorator.c  csalt_store_decorator_array.c  csalt_store_decorator_logger.c  csalt_store_decorator_mutex.c  csalt_store_decorator_rwlock.c  csalt_store_fallback.c  csalt_store_file_descriptor.c  csalt_store_list.c  (+11 more)
