csaltinclude_HEADERS = %reldir%/csalt/util.h\
		       %reldir%/csalt/resources.h\
		       %reldir%/csalt/baseresources.h\
		       %reldir%/csalt/fileresource.h\
		       %reldir%/csalt/stores.h\
		       %reldir%/csalt/basestores.h\
		       %reldir%/csalt/compositestores.h\
		       %reldir%/csalt/compositeresources.h\
		       %reldir%/platforms/posix/csalt/platform/socket.h\
		       %reldir%/csalt/networkresources.h\
		       %reldir%/csalt/decoratorstores.h\
		       %reldir%/csalt/decoratorresources.h

lib_LTLIBRARIES = %reldir%/libcsalt.la

%canon_reldir%_libcsalt_la_SOURCES = %reldir%/resources/resources.c\
	%reldir%/csalt/resources.h\
	%reldir%/stores/stores.c\
	%reldir%/csalt/stores.h\
	%reldir%/resources/file.c\
	%reldir%/csalt/fileresource.h\
	%reldir%/stores/compositestores.c\
	%reldir%/csalt/compositestores.h\
	%reldir%/resources/compositeresources.c\
	%reldir%/csalt/compositeresources.h\
	%reldir%/csalt/impl/list_impl.h\
	%reldir%/platforms/posix/csalt/platform/socket.h\
	%reldir%/resources/network.c\
	%reldir%/csalt/networkresources.h\
	%reldir%/stores/decorators.c\
	%reldir%/csalt/decoratorstores.h\
	%reldir%/resources/decorators.c\
	%reldir%/csalt/decoratorresources.h

