function(testcase target)
	add_executable(${target}_test ${target}.c)
	target_link_libraries(${target}_test csalt)
	add_test(NAME ${target} COMMAND ${target}_test)
endfunction(testcase)

testcase(csalt_store_split)
#testcase(csalt_store_split)
#testcase(csalt_store_memory)
#testcase(csalt_store_transfer)
#testcase(csalt_store_file_descriptor)
#testcase(csalt_store_pair)
#testcase(csalt_store_fallback)
#testcase(csalt_store_decorator_logger)
#testcase(csalt_store_decorator_array)
#testcase(csalt_store_decorator_mutex)
#testcase(csalt_store_decorator_rwlock)
#testcase(csalt_decorator_mutex)
#testcase(csalt_resource_use)
#testcase(csalt_use)
#testcase(csalt_resource_heap)
#testcase(csalt_resource_file)
#testcase(csalt_resource_network_udp_bound)
#testcase(csalt_resource_network_udp_connected)
#testcase(csalt_resource_network_udp_stateless)
#testcase(csalt_resource_pair)
#testcase(csalt_resource_vector)
#testcase(csalt_resource_first)
#testcase(csalt_resource_fallback)
#testcase(csalt_resource_decorator_lazy)
#testcase(csalt_resource_decorator_logger)
