function(testcase target)
	add_executable(${target}_test ${target}.c)
	target_link_libraries(${target}_test csalt dl)
	add_test(NAME ${target} COMMAND ${target}_test)
endfunction(testcase)

testcase(csalt_store_memory)
testcase(csalt_store_split)
testcase(csalt_store_pair)
testcase(csalt_store_fallback)
testcase(csalt_store_decorator)
testcase(csalt_store_logger)
testcase(csalt_store_array)
testcase(csalt_store_mutex)
testcase(csalt_store_rwlock)
testcase(csalt_store_transfer)
testcase(csalt_resource_use)
testcase(csalt_use)
testcase(csalt_resource_heap)
testcase(csalt_resource_format)
testcase(csalt_resource_file)
testcase(csalt_resource_pair)
testcase(csalt_resource_first)
testcase(csalt_resource_fallback)
testcase(csalt_resource_lazy)
testcase(csalt_resource_logger)
testcase(csalt_resource_mutex)
testcase(csalt_resource_network)
testcase(csalt_resource_network_client)
