TESTS = %reldir%/csalt_resource_use\
	%reldir%/csalt_memory_resource\
	%reldir%/csalt_store_split\
	%reldir%/csalt_store_transfer\
	%reldir%/csalt_file_resource\
	%reldir%/csalt_store_list\
	%reldir%/csalt_store_fallback\
	%reldir%/csalt_resource_list\
	%reldir%/csalt_resource_first\
	%reldir%/csalt_resource_network_udp

check_PROGRAMS = $(TESTS)
LDADD = $(top_builddir)/src/libcsalt.la
