TESTS = %reldir%/csalt_resource_use\
	%reldir%/csalt_memory_resource\
	%reldir%/csalt_store_split\
	%reldir%/csalt_store_transfer\
	%reldir%/csalt_file_resource\
	%reldir%/csalt_store_list\
	%reldir%/csalt_store_fallback\
	%reldir%/csalt_resource_list\
	%reldir%/csalt_resource_first\
	%reldir%/csalt_resource_network_udp_connected\
	%reldir%/csalt_resource_network_udp_bound\
	%reldir%/csalt_resource_network_udp_stateless\
	%reldir%/csalt_store_decorator_logger\
	%reldir%/csalt_resource_decorator_logger

check_PROGRAMS = $(TESTS)
LDADD = $(top_builddir)/src/libcsalt.la
