TESTS = %reldir%/csalt_resource_use\
	%reldir%/csalt_store_file_descriptor\
	%reldir%/csalt_memory_resource\
	%reldir%/csalt_store_split\
	%reldir%/csalt_store_transfer\
	%reldir%/csalt_file_resource\
	%reldir%/csalt_resource_first\
	%reldir%/csalt_store_decorator_logger\
	%reldir%/csalt_resource_decorator_logger\
	%reldir%/csalt_store_pair\
	%reldir%/csalt_resource_pair\
	%reldir%/csalt_store_fallback\
	%reldir%/csalt_resource_fallback\
	%reldir%/csalt_resource_decorator_lazy\
	%reldir%/csalt_store_memory\
	%reldir%/csalt_resource_vector\
	%reldir%/csalt_store_decorator_mutex\
	%reldir%/csalt_store_decorator_rwlock

check_PROGRAMS = $(TESTS)
LDADD = $(top_builddir)/src/libcsalt.la
